tests/aws_loadbalancers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: testing
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
kind: Service
apiVersion: v1
metadata:
  name: elb-nginx
  namespace: testing
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert:  {ACM_CERTIFICATE}
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 443
    name: https
    targetPort: 80
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: elb-internal-nginx
  namespace: testing
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "0.0.0.0/0"
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
  # Annotations/Subnet Tagging to restrict which subnets to use for this.
  # Add details
  type: LoadBalancer
---
kind: Service
apiVersion: v1
metadata:
  name: nlb-nginx
  namespace: testing
  # List of the available annotations: https://kubernetes-sigs.github.io/aws-alb-ingress-controller/guide/ingress/annotation/
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
  # Annotations/Subnet Tagging to restrict which subnets to use for this.
  type: LoadBalancer
