tests/debugger.deploy.k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debugger-deployment
  labels:
    app: debugger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debugger
  template:
    metadata:
      labels:
        app: debugger
    spec:
      containers:
      - name: debugger
        image: "{AcctId}.dkr.ecr.us-west-2.amazonaws.com/test:debugger"
        ports:
        - containerPort: 80
